[package]
name = "rustiv"
version = "0.1.0"
edition = "2021"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.thin_str]
version = "0.1"
features = ["serde_support"]

[dependencies]
serde_json = "1.0"
casey = "0.3"
